--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Search Selector",
+  "name": "searchcuts",
   "description": "This extension enables you to select a google search result with the keyboard",
   "version": "0.2",
 
